--- a/recruit-gui/src/app/faq/faq.component.html
+++ b/recruit-gui/src/app/faq/faq.component.html
@@ -1,7 +1,7 @@
 <div class="page">
 
 	<!-- Nav options -->
-	<div class="nav-tabs-bar"></div>
+	<div class="nav-tabs-bar" *ngIf="isAuthenticated()"></div>
 	
     <div class="page-body">
             <div class="row">
