--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -3,13 +3,26 @@
 @import 'material-symbols';
 
 @media (min-width:701px)  {
+
+	.mobile-header-bar{
+		width:100%;
+		height:20px;
+		background:black;
+		text-decoration: none;
+	}
+	
+	.header-bar-empty{
+		height:25px;
+		background:white;
+		width:100%;
+	}
 		
 	.mobile-only-element{
-		display:none;
+		display:none !important;
 	}	
 	
 	.non-mobile-only-element{
-		display:inline;
+		display:block;
 	}
 	
 	.arenella-whole-width-page{
@@ -119,7 +132,8 @@
 		margin: 0;
 		padding: 10px;
 		overflow: hidden;
-		background-color:#303030;
+		/*background-color:#303030;*/
+		border-bottom:2px solid black;
 	}
 	
 	html, body { height: 100%; }
@@ -216,7 +230,6 @@
 	
 	.nav-tabs-bar{
 		min-height:40px;
-		background:#dee2e6;
 	}
 	
 	.nav-tabs{
