--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -165,6 +165,14 @@
 									<td>{{'arenella-stats-recruiter-downloads-views-week' | translate}}</td>
 									<td>{{listingViewsThisWeek}}</td>
 								</tr>
+								<tr>
+									<td>{{'arenella-stats-recruiter-downloads-contact-requests-today' | translate}}</td>
+									<td>{{contactRequestsToday}}</td>
+								</tr>
+								<tr>
+									<td style="min-width:220px">{{'arenella-stats-recruiter-downloads-contact-requests-week' | translate}}</td>
+									<td>{{contactRequestsThisWeek}}</td>
+								</tr>
 							</table>
 						</div>
 					</div>
