--- a/recruit-gui/src/app/accounts/cities/cities.component.html
+++ b/recruit-gui/src/app/accounts/cities/cities.component.html
@@ -14,7 +14,7 @@
 	     		</thead>
 	     		<tbody>
 	     		<tr *ngFor="let city of citiesAwaitingActivation">
-	      			<td>{{city.country}}</td>
+	      			<td>{{city.country | translate}}</td>
 	      			<td>{{city.name}}</td>
 	      			<td><input type="number" formControlName=lat></td>
 	      			<td><input type="number" formControlName="lon"/></td>
