FE chat service, Object and basic layout of Chat window

--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -110,11 +110,12 @@
         </li>		
       </ul>
 
+	
 </div>
 
 <router-outlet></router-outlet>
 
-
+<app-private-messaging #privateChat ></app-private-messaging>
 
 <dialog #tandcBox class="terms-and-conditions-box">
 
