--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -67,7 +67,8 @@
 		color:#002549;
 		padding-left:5px;
 		padding-right:5px;
-		min-width:160px;
+		min-width:140px;
+		font-size:14px;
 	}
 	
 	.dropdown-item-preauth{
