--- a/recruit-gui/src/app/private-messaging/private-messaging.component.css
+++ b/recruit-gui/src/app/private-messaging/private-messaging.component.css
@@ -66,7 +66,7 @@
 }
 
 .chat-view-item-panel{
-	padding:5px;
+	padding:0px;
 }
 
 .view-item-selected{
@@ -80,4 +80,21 @@
 	height:100%;
 	text-align:center;
 	font-size:18px;
+}
+
+.contacts{
+	clear: both;
+	position:relative;
+	font-size:12px;
+	width:100%;
+	text-align:left;
+}
+
+.chat-list-box{
+	height:50px;
+	width:100%;
+	text-align:left;
+	border-bottom:1px solid grey;
+	padding:5px;	
+	
 }
