--- a/recruit-gui/src/app/contact/contact.component.html
+++ b/recruit-gui/src/app/contact/contact.component.html
@@ -11,15 +11,15 @@
 		  <table class="non-mobile-only-element">
 			<tr>
 				<th>{{ "arenella-contact-company-name" | translate }}</th>
-				<td>Arrenella BV</td>
+				<td>Kevin Parkings</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-address" | translate }}</th>
-				<td>Julianastraat 16, Noordwijk 2202KD Nederland</td>
+				<td>Via Cannata 26 - 87020 - Santa Maria del Cedro (CS) - Italy</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-registration-number" | translate }}</th>
-				<td>61982156</td>
+				<td>03982200788</td>
 			</tr>
 			<tr>
 				<th>{{ "arenella-contact-company-registration-email" | translate }}</th>
