--- a/recruit-gui/src/app/private-messaging/private-messaging.component.css
+++ b/recruit-gui/src/app/private-messaging/private-messaging.component.css
@@ -58,19 +58,21 @@
 .chatwindow-view-item{
 	float:left;
 	text-align:center;
-	width:50%;
+	width:100%;
 	cursor:pointer;
 	border-bottom:1px solid grey;
 	border-right:1px solid grey;
 	padding:5px;
+	font-weight:bold;
+}
+
+.view-item-selected{
+	cursor:default;
 }
 
 .chat-view-item-panel{
 	padding:0px;
-}
-
-.view-item-selected{
-	background:lightgrey;
+	clear:both;
 }
 
 .no-contacts-message{
@@ -98,7 +100,7 @@
 	width:100%;
 	text-align:left;
 	border-bottom:1px solid grey;
-	padding-left:10px;	
+	padding-left:10px;		
 	font-weight:bold;
 	font-size:14px;
 	cursor:pointer;	
@@ -107,3 +109,52 @@
 .chat-list-box:hover{
 	background:white;
 }
+
+.pm-messages-header{
+	width:100%;
+	height:100px;
+	border-bottom:2px solid grey;
+	padding:5px;
+	background:#E8E8E8;
+}
+
+.pm-messages-header-username{
+	color:#00004d;
+	padding:10px;
+	font-size:18px;
+	font-weight:bold;
+	margin-top:10px;
+}
+
+.pm-messages-messages{
+	padding:5px;
+	color:#66a3ff;
+	width:100%;
+	height:200px;
+	overflow-y:scroll;
+}
+
+.pm-messages-new-message{
+	border-top:2px solid black;
+	padding:5px;
+	width:100%;
+	height:130px;
+}
+
+.pm-messages-new-message textarea{
+	border-top:2px solid grey;
+	width:100%;
+	height:100%;
+	border: none;
+    outline: none;
+    resize: none;
+}
+
+.msg-reply{
+	padding-top:10px;
+	color:lightgrey;
+	width:100%;
+	padding-bottom:5px;
+	border-bottom:1px solid lightgrey;
+}
+
