--- a/recruit-gui/src/app/private-messaging/private-messaging.component.css
+++ b/recruit-gui/src/app/private-messaging/private-messaging.component.css
@@ -112,7 +112,7 @@
 
 .pm-messages-header{
 	width:100%;
-	height:100px;
+	height:50px;
 	border-bottom:2px solid grey;
 	padding:5px;
 	background:#E8E8E8;
@@ -128,6 +128,8 @@
 
 .pm-messages-messages{
 	padding:5px;
+	padding-left:10px;
+	padding-right:10px;
 	color:#66a3ff;
 	width:100%;
 	height:200px;
@@ -144,7 +146,7 @@
 .pm-messages-new-message textarea{
 	border-top:2px solid grey;
 	width:100%;
-	height:100%;
+	height:100px;
 	border: none;
     outline: none;
     resize: none;
@@ -156,5 +158,18 @@
 	width:100%;
 	padding-bottom:5px;
 	border-bottom:1px solid lightgrey;
+}
+
+.chatBtn{
+	float:right;
+	margin-right:10px;
+}
+
+.message-own-true{
+	color:blue;
+}
+
+.message-own-false{
+	color:black;
 }
 
