--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -1,5 +1,13 @@
 @media (min-width:701px)  {
 	
+	.unread-chats-true{
+		color:green;
+	}
+	
+	.unread-chats-false{
+		color:#002549;
+	}
+	
 	.no-chat-box{
 		text-align:center;
 		line-height:100px; 
