--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -109,7 +109,7 @@
            <a class="dropdown-item recruiter-account " routerLink="/recruiter-account">{{'arenella-app-menu-account' | translate}}</a>
         </li>
         <li class="li-arenella-nav {{menuItemMobileCss}}" *ngIf="isAuthenticated()" (click)="openChat()">
-           <span class="chat-icon material-icons">chat</span>
+           <span class="chat-icon material-icons unread-chats-{{hasUnreadMessages()}}">chat</span>
         </li>      		
       </ul>
 </div>
