stopped chat jump hopefully

--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div id="pageTop" style="visibility:hidden" class="mobile-only-element"></div>
 <div class="mobile-only-element mobile-header-bar">
 </div>
 <div class="mobile-only-element">
