--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -84,6 +84,7 @@
 								<li>{{'arenella-recruiter-signup-subscriptions-paid-text2' | translate}}</li>
 								<li>{{'arenella-recruiter-signup-subscriptions-paid-text3' | translate}}</li>
 								<li>{{'arenella-recruiter-signup-subscriptions-paid-text4' | translate}}</li>
+								<li>{{'arenella-recruiter-signup-subscriptions-paid-text5' | translate}}</li>
 							</ul>
 						</div>
 					</div>
