--- a/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.html
+++ b/recruit-gui/src/app/candidate-info-box/candidate-info-box.component.html
@@ -7,7 +7,7 @@
 			</div>
        	</div>
        	<div>
-       		<!--  button *ngIf="config.showContactButton()" class="btn btn-secondary arenella-btn contact-button"  (click)="openContatBox()">{{'arenella-infobox-contact' | translate}}</-->
+       		<button *ngIf="config.showEmailButton()" class="btn btn-secondary arenella-btn contact-button"  (click)="openContatBox()">{{'arenella-infobox-contact' | translate}}</button>
        		<button *ngIf="config.showContactButton()" class="btn btn-secondary arenella-btn contact-button"  (click)="openChat()">{{'arenella-chat' | translate}}</button>
 	   	</div>
        	<div *ngFor="let infoItem of config.getItems()" class="left-box">
